# zahnerflow

./: .env.example  .gitignore  .mcp.json  AGENTS.md  BUG_FIX_REPORT.md  CHANGELOG.md  CLAUDE.md  DRAG_SORT_CHECK_RESULT.md  DRAG_SORT_IMPLEMENTATION_REPORT.md  FURNACE_API_REFACTOR_DOCUMENTATION.md  FURNACE_CORRECT_OPERATION_GUIDE.md  FURNACE_IMPLEMENTATION_ANALYSIS.md  FURNACE_REFACTOR_FINAL_SUMMARY.md  FURNACE_REFACTOR_PROGRESS.md  FURNACE_THREE_LAYER_ARCHITECTURE_SOLUTION.md  GEMINI.md  IMPLEMENTATION_REPORT.md  INSTALL.md  MFC_VARIABLE_CHANGES.md  Parametername.md  TEMP_ID_REMOVAL_REPORT.md  Todo.md  check_temp_id_report.md  clamp-optimization.md  debug_fastapi.py  depth_fix.py  final_comprehensive_fix.py  fix_all_imports.py  fix_all_remaining_imports.py  fix_realtime_scan.md  frontendrebuilt.md  mcp-config.json  package.json  pnpm-workspace.yaml  precise_fix.py  pyproject.toml  rebuild-project.bat  start-all.bat  start-simulator.bat  task2_property_panel_implementation.md  (+10 more)
.claude/: settings.local.json
.gemini/: settings.json.orig
.memory/: changelog.md  design.md  rules.md
.ruler/: AGENTS.md  ruler.toml
data/: app.db.json
doc/: 250916_retained-console-log-records.md  Addressing.md  EXECUTION_LOG.md  EXECUTION_LOG_FrontEnd.md  EXECUTION_LOG_Furnace.md  EXECUTION_LOG_MFC.md  EXECUTION_LOG_NEW.md  MFC_API_Specification.md  PollingChange.md  Todo.md  ZAHNERFLOW_DATA_STORAGE_NAMING_SYSTEM_DESIGN.md  Zahner设备函数更新与节点配置.md  Zahner设备控制流程文档.md  console-management-guide.md  dataflow.md  development-todo-list.md  event-bus-logging-analysis.md  project-structure.md  (+19 more)
(+830 files in other folders)
