[project]
name = "zahnerflow-runtime"
version = "1.0.3"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "python-socketio",
  "uvicorn",
  "pyserial",
  "pydantic",
  "zahner-analysis>=1.1.5",
  "thales-remote>=1.2.8",
  "aiosmtplib>=5.1.2",
  "tzdata>=2026.2",
]

[dependency-groups]
dev = [
  "pyinstaller",
  "pytest",
]
